type and header files modified

--- a/style.scss
+++ b/style.scss
@@ -162,14 +162,14 @@ footer {
   }
     ul.menu li {
       display:inline;
-      margin-right: 10px;
+      // margin-right: 10px;
     }
 
       ul.menu li a {
-        color:#333;
-        padding:10px;
-        background:#333;
-        color:white;
+        // color:#333;
+        // padding:10px;
+        // background:#333;
+        // color:white;
       }
 
 
