--- a/_footer.scss
+++ b/_footer.scss
@@ -1,4 +1,11 @@
 .social {
-	float: left;
-	margin: 0 auto;
+	text-align: center;
+	i {
+		margin: 0 25px;
+		font-size: 25px;
+	}
+} 
+
+.copyright {
+	text-align: center;
 }
