--- a/_home.scss
+++ b/_home.scss
@@ -3,8 +3,10 @@
 	background-size: cover;
 	width: 1200px;
 	height: 100vh;
+	position: absolute;
 }
 
 .header h1 {
-	left: 50%;
+	position: relative;
+	left: 500px;
 }
