--- a/_footer.scss
+++ b/_footer.scss
@@ -3,9 +3,13 @@
 	i {
 		margin: 0 25px;
 		font-size: 25px;
+		color: grey;
 	}
+	border-top: 1px solid grey;
+	padding-top: 30px;
 } 
 
 .copyright {
 	text-align: center;
+	color: grey;
 }
