edited blog page and header

--- a/_header.scss
+++ b/_header.scss
@@ -1,8 +1,12 @@
-#menu-main-menu {
+#mainNavHome {
+	border-bottom: 1px solid lightgrey;
+}
+
+#main-menu {
 	float: right;
 }
 
-ul#menu-main-menu {
+ul#main-menu {
 	font-family: 'Oswald';
 	font-weight: 300;
 	font-size: 12px;
