--- a/_home.scss
+++ b/_home.scss
@@ -1,11 +1,24 @@
-.header {
+.heroImage {
 	background-image: url(http://www.freestockphotos.name/wallpaper-original/wallpapers/coffee-cups-brown-cappuccino-wallpaper-6372.jpg);
 	background-size: cover;
-	width: 1200px;
-	height: 100vh;
+	background-attachment: fixed;
+	top: -100px;
+	height: 70vh;
+	h1 {
+		max-width: 60%;
+		position: relative;
+		margin: 0 auto;
+		top: 100px;
+		font-family: 'Oswald';
+		font-weight: 400;
+		text-transform: uppercase;
+		text-align: center;
+		letter-spacing: 10px;
+		padding: 15px;
+		background-color: rgba(255,255,255,0.3);
+		a {
+			color: #fff;
+		}
+	}
 }
 
-.header h1 {
-	position: relative;
-	left: 500px;
-}
