--- a/_contact.scss
+++ b/_contact.scss
@@ -1,26 +1,81 @@
-.wpcf7-form {
+.main-contact {
+
+	background: url(img/meringue_dessert.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: auto;
+}
+
+.contact-content {
+	padding: 30px;
+}
+
+form.login 
+
+{
+	width: 50%;
+	background: rgba(255,255,255,.7);
+	padding: 30px;;
 	margin: 0 auto;
+	padding: 20px 10px 10px 10px;
+	height: auto;
+	border: 2px solid white;
 }
 
-// This will effect the name and email input boxes:
-.wpcf7-validates-as-required {
-	
+form h2 {
+	text-align: center;
 }
 
-// This will effect the email input box:
-
-.wpcf7-validates-as-required {
-	
+input.username, input.email {
+	width: 47%;
+	padding: 10px;
+	border: 1px solid lightgrey;
+	font-size: 16px;
+	margin: 5px .5% 5px 1.5%;
 }
 
-// This will effect the name input box:
+textarea.bio {
 
-.wpcf7-validates-as-required {
-	
+	width: 97%;
+	max-width: 97%;
+	/*width: 447px;*/
+	height: 100px;
+	/*max-width: 447px; */
+    max-height: 150px;
+	margin: 5px 1.5% 0 ;
+	border: 1px solid lightgrey;
+	font-size: 16px;
+	padding: 10px; 
+
 }
 
-// This will effect the message text area:
+input.submitButton {
+	background: #94b24d;
+	width: 250px;
+	color: white;
+	font-size: 20px;
+	font-family: 'Oswald';
+	font-weight: 400;
+	text-transform: uppercase;
+	letter-spacing: 3px;
+	border: 2px solid white;
+	padding: 10px;
+	margin: 30px auto 30px;
+	display: block;
+	text-align: center;
+	padding-bottom: 5px;
+}
+input[type=submit].submitButton {
+	color: white;
+}
 
-.text-area {
-	width: 50px;
+// input.submitButton:hover {
+// 	text-decoration: underline;
+// }
+
+input:focus, textarea:focus {
+	box-shadow: 0 0 10px #94b24d;
+	outline:0;
 }
