--- a/_home.scss
+++ b/_home.scss
@@ -11,37 +11,39 @@
 }
 
 .heroImage {
-	background-image: url('http://www.freefoodphotos.com/imagelibrary/seafood/salmon_crispbread.jpg');
+	// background-image: url('http://www.freefoodphotos.com/imagelibrary/seafood/salmon_crispbread.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 	top: -100px;
 	height: 90vh;
 	.titleTagline {
 		margin: 0 auto;
-		padding-top: 140px;
+		padding-top: 15%;
 	}
-	h1 {
+	h1.mainTitle {
 		max-width: 60%;
 		text-transform: uppercase;
 		text-align: center;
 		font-family: 'Oswald';
 		font-weight: 400;
+		font-size: 45px;
 		letter-spacing: 10px;
 		padding: 15px;
 		background-color: rgba(0,0,0,0.1);
+		border: 5px solid rgba(255,255,255,0.6);
 		margin: 0 auto;
 		color: #fff;
 	}
 	h2.subtitle {
 		text-transform: uppercase;
 		text-align: center;
-		background-color: rgba(0,0,0,0.1);
-		color: #fff;
+		background-color: rgba(255,255,255,0.6);
+		color: rgba(0,0,0,0.5);
 		font-family: 'Oswald';
 		font-weight: 300;
-		font-size: 30px;
-		letter-spacing: 4px;
-		margin: 25px 10%;
+		font-size: 20px;
+		letter-spacing: 5px;
+		margin: 25px 25%;
 		padding: 5px;
 	}
 }
@@ -67,7 +69,7 @@
 // MENU INFO ========================
 
 .menuInfo {
-	background-image: url('http://www.freefoodphotos.com/imagelibrary/herbs/chilis.jpg');
+	// background-image: url('http://www.freefoodphotos.com/imagelibrary/herbs/chilis.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 	text-align: center;
@@ -128,6 +130,12 @@
 		}
 		.miniPostImg {
 			margin-top: 20px;
+		}
+		p {
+			font-family: 'Oswald';
+			font-weight: 300;
+			font-size: 12px;
+			letter-spacing: 3px;
 		}
 	}
 }
