--- a/_menu.scss
+++ b/_menu.scss
@@ -3,10 +3,26 @@
 	background-size: cover;
 	height: 100vh;
 	background-repeat: no-repeat;
-	// position: fixed;
+	background-attachment: fixed;
+
+	h1 {
+		position: relative;
+		max-width: 400px;
+        text-transform: uppercase;
+        text-align: center;
+        font-family: 'Oswald';
+        font-weight: 400;
+        letter-spacing: 10px;
+        padding: 15px;
+        background-color: rgba(255,255,255,0.1);
+        color: #fff;
+        margin: 0 auto;
+        top: 250px;
+	}
 }
 
-.menuWelcomeMessage {
+
+.menuTextContainer {
 	height: 200px;
 	padding: 50px 0;
 }
@@ -29,6 +45,14 @@
 
 .menuColumnContainer {
 	margin-bottom: 50px;
+}
+
+.menuImageBanner {
+	background-image: url(../images/cinammonBun400.jpg);
+}
+
+.bakeryColumn, .coffeeColumn p {
+	width: 80%;
 }
 
 p {
