--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,7 @@ Author URI: http://hackeryou.com
 @import 'menu';
 @import 'contact';
 @import 'blog';
+@import '404';
 
 
 /* =============================================================================
