--- a/_header.scss
+++ b/_header.scss
@@ -27,8 +27,8 @@ ul#main-menu {
 
 #mainNavHome {
 	text-transform: uppercase;
-	background-color: #fff;
 	padding: 20px;
+	background-color: rgba(255,255,255,0.5);
 }
 
 .logoText {
