--- a/_home.scss
+++ b/_home.scss
@@ -30,7 +30,7 @@
 		letter-spacing: 10px;
 		padding: 15px;
 		background-color: rgba(0,0,0,0.1);
-		border: 5px solid rgba(255,255,255,0.6);
+		border: 10px solid rgba(255,255,255,0.6);
 		margin: 0 auto;
 		color: #fff;
 	}
@@ -59,10 +59,13 @@
 		
 	}
 	p {
-		font-family: 'Oswald';
+		font-family: 'Karla';
 		font-weight: 300;
-		font-size: 15px;
+		font-size: 13px;
 		letter-spacing: 2px;	
+		line-height: 20px;
+		text-transform: uppercase;
+		margin: 20px 12% 0;
 	}
 }
 
@@ -107,10 +110,11 @@
 	text-align: center;
 	text-transform: uppercase;
 	h3 {
-		font-family: 'Oswald';
+		font-family: 'Karla';
 		font-weight: 300;
-		font-size: 15px;
-		letter-spacing: 4px;
+		font-size: 13px;
+		letter-spacing: 2px;	
+		text-transform: uppercase;
 	}
 }
 
