--- a/_404.scss
+++ b/_404.scss
@@ -13,6 +13,9 @@
 
 		.oopsiesContent {
 			width: 70%;
+				@media screen and (max-width: 575px) {
+					  		width: 90%;
+					  }
 			background-color: rgba(255,255,255,0.7);
 			margin: 0 auto;
 			padding: 20px 40px 10px 40px;
@@ -46,8 +49,13 @@
 			input[type="search"] {
 				padding: 10px;
 				margin: 20px auto;
-				width: 50%;
+				width: 75%;
 				border: 1px solid lightgrey;
+				font-family: 'Oswald';
+				font-size: 16px;
+				text-transform: uppercase;
+				font-weight: 300;
+				letter-spacing: 3px;
 			}
 
 			.searchsubmit {
@@ -66,6 +74,9 @@
 						&:hover {
 							background: RGBA(146, 177, 92, 1);
 						}
+						@media screen and (max-width: 580px) {
+					  		width: 75%;
+					  }
 				
 			}
 	}
