--- a/_blog.scss
+++ b/_blog.scss
@@ -1,20 +1,38 @@
+// VARIALBLES
+$mobile: "(max-width: 480px)";
+$mobile-landscape: "(max-height: 450px)";
+$tablet: "(max-width: 768px)";
+$small-desktop: "(max-width: 940px)";
+
+
+
 .blog-container {
-display: flex;
+	display: flex;
+	@media #{$tablet} {
+		display: block;
+	} 
 }
 
 .blog-content {
 	display: flex;
 	flex-wrap: wrap;
 	width: 70%;
+	@media #{$tablet} {
+		width: 100%;
+	} 
 }
 
-.sidebar {
+.mainSidebar {
 	font-family: 'Karla';
 	font-size: 13px;
 	letter-spacing: 2px;
 	margin-top: 100px;
 	padding: 30px;
-	border-left: 1px solid lightgrey;
+	border-left: 1px solid lightgrey; 
+	@media #{$tablet} {
+		margin-top: 0;
+		width: 100%;
+	}
 	a{
 		color: #000;
 		padding: 2px;
@@ -23,15 +41,54 @@ display: flex;
 			background-color: lightgrey; 
 		}
 	}
+	ul {
+		list-style: none;
+		padding: 0;
+		@media #{$tablet} {
+			display: flex;
+			flex-wrap: wrap;
+		}
+		li {
+			@media #{$tablet} {
+				margin: 5px;
+			}
+			ul {
+				@media #{$tablet} {
+					padding: 0;
+				}
+				li {
+					@media #{$tablet} {
+					padding: 0;
+					}
+				}
+			}
+		}
+	}
 }
 
 .blogPost {
 	flex: 1 0 40%;
 	margin: 20px;
+	@media #{$mobile} {
+		flex: 1 0 auto;
+	} 
 }
 
 .entry-content {
 	padding-right: 30px;
+	a {
+		text-transform: uppercase;
+		color: #000;
+		&:hover {
+			background-color: lightgrey;
+			color: #000;
+		}
+	}
+	p {
+		@media #{$mobile} {
+			display: none;
+		} 
+	}
 }
 
 .type-post {
@@ -39,7 +96,6 @@ display: flex;
 	font-size: 14px;
 	letter-spacing: 1px;
 	color: grey;
-	padding: 15px;
 	a {
 		text-transform: uppercase;
 		color: #000;
@@ -68,5 +124,97 @@ h3.widget-title {
 	font-family: 'Oswald';
 	font-weight: 300;
 	letter-spacing: 2px;
+}
+
+// SINGLE PAGE STYLES ===================
+
+.single-blog-container {
+	display: flex;
+	padding: 50px;
+	@media #{$tablet} {
+		display: block;
+	} 
+}
+
+.single-blog-content {
+	display: flex;
+	flex-wrap: wrap;
+	width: 80%;
+	@media #{$tablet} {
+		width: 100%;
+	} 
+	h1 {
+		font-family: 'Oswald';
+		font-weight: 400;
+		text-transform: uppercase;
+		font-size: 30px;
+		letter-spacing: 5px;
+		color: lightgrey;
+	}
+}
+
+.single-entry-content {
+	padding-right: 30px;
+}
+
+.single-image {
+	width: 100%;
+	margin: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+img.attachment-large {
+	width: 80%;
+	height: 80%;
+}
+
+#nav-below {
+	width: 100%;
+	a {
+		text-transform: uppercase;
+		color: #000;
+		&:hover {
+			background-color: lightgrey;
+			color: #000;
+		}
+	}
+}
+
+#respond {
+	h3#reply-title {
+		font-family: 'Oswald';
+		font-weight: 400;
+		text-transform: uppercase;
+		font-size: 20px;
+		letter-spacing: 5px;
+		color: grey;
+	}
+	a {
+		text-transform: uppercase;
+		color: #000;
+		&:hover {
+			background-color: lightgrey;
+			color: #000;
+		}
+	}
+}
+
+// AUTHOR PAGE =====================
+
+.authorInfo {
+	text-align: center;
+	h1 {
+		font-family: 'Oswald';
+		font-weight: 400;
+		text-transform: uppercase;
+		font-size: 20px;
+		letter-spacing: 5px;
+		color: grey;
+		a{
+			color: #000;
+		}
+	}
 }
 
