--- a/_home.scss
+++ b/_home.scss
@@ -1,3 +1,11 @@
+// VARIALBLES
+$mobile: "(max-width: 480px)";
+$mobile-landscape: "(max-height: 450px)";
+$tablet: "(max-width: 768px)";
+$small-desktop: "(max-width: 940px)";
+
+
+
 .mainPage {
 	h2 {
 		font-family: 'Oswald';
@@ -16,6 +24,9 @@
 	background-attachment: fixed;
 	top: -100px;
 	height: 90vh;
+	@media #{$mobile} {
+		height: 80vh;
+	} 
 	.titleTagline {
 		margin: 0 auto;
 		padding-top: 15%;
@@ -33,6 +44,10 @@
 		border: 10px solid rgba(255,255,255,0.6);
 		margin: 0 auto;
 		color: #fff;
+		@media #{$mobile} {
+			max-width: 80%;
+			font-size: 25px;
+		} 
 	}
 	h2.subtitle {
 		text-transform: uppercase;
@@ -45,7 +60,44 @@
 		letter-spacing: 5px;
 		margin: 25px 25%;
 		padding: 5px;
+		@media #{$mobile} {
+			font-size: 18px;
+			margin: 25px 10%;
+		} 
 	}
+}
+
+#fadeInBox {
+	-webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+	-moz-animation: fadein 3s; /* Firefox < 16 */
+	-ms-animation: fadein 3s; /* Internet Explorer */
+	-o-animation: fadein 3s; /* Opera < 12.1 */
+	animation: fadein 3s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 // WELCOME AND ABOUT ======================== 
@@ -55,8 +107,17 @@
 	color: grey;
 	text-align: center;
 	padding: 100px;
+	@media #{$mobile}, #{$tablet} {
+		padding: 25px;
+	} 
 	h2 {
-		
+		@media #{$tablet} {
+			font-size: 40px;
+		} 
+		@media #{$mobile} {
+			font-size: 25px;
+			margin: 25px;
+		} 
 	}
 	p {
 		font-family: 'Karla';
@@ -66,6 +127,9 @@
 		line-height: 20px;
 		text-transform: uppercase;
 		margin: 20px 12% 0;
+		@media #{$mobile}, #{$tablet} {
+			margin: 20px 5% 0;
+		} 
 	}
 }
 
@@ -77,11 +141,20 @@
 	background-attachment: fixed;
 	text-align: center;
 	padding: 100px;
+	@media #{$tablet} {
+		padding: 50px;
+	}
+	@media #{$mobile} {
+		padding: 25px;
+	} 
 	h2 {
 		background-color: rgba(255,255,255,0.2);
 		color: #fff;
 		border: 10px solid rgba(255,255,255,0.7);
 		padding: 15px;
+		@media #{$mobile} {
+			font-size: 30px;
+		} 
 		a {
 			color: #fff;
 		}
@@ -121,8 +194,13 @@
 .miniPostCont {
 	margin-top: 40px;
 	display: flex;
+	flex-wrap: wrap;
+	@media #{$mobile} {
+		flex-direction: column;
+	} 
 	.homeMiniPost {
 		flex: 1 0 auto;
+		margin: 5px;
 		a {
 			color: grey;
 			font-family: 'Oswald';
